src/objects/Glxy_ConsumerPriceIndex__c.object
<CustomObject>
    <description>This table contains information about each lease, along with increases and decreases in operating costs associated with the lease and the CPI to adjust rent on leases.</description>
    <fields>
        <fullName>APR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>APR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUG_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AUG NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acceptance620Date__c</fullName>
        <inlineHelpText>Date 620 approved/forwarded to R7</inlineHelpText>
        <label>620 to R7 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualAmountCurrentFY__c</fullName>
        <formula>If(
    (AccrualEndDate__c &gt; AccrualStartDateCY__c  &amp;&amp; Text(StatusCD__c)  == &apos;Estimate&apos; &amp;&amp;
         EffectiveDate__c &lt;= Today ()),
    ( 
      (
        (AnnualAmount__c/12) 
        * 
        ((12 * (YEAR(AccrualEndDate__c) - YEAR(AccrualStartDateCY__c))) +
          (MONTH(AccrualEndDate__c) - MONTH(AccrualStartDateCY__c)) + 1)
      )
      +
      (
        if( (EffectiveDateFY__c == ProcessedDateFY__c),
            ( 
               (DAY(DATE(YEAR(EffectiveDate__c), MONTH(EffectiveDate__c), 1))
                  - Day(EffectiveDate__c)) 
               * 
               AccrualAmountEffectiveMonthRate__c  
            ),
            0
         )
      )
    ),
   0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of transaction attributable to current FY</inlineHelpText>
        <label>Current FY Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmountEffectiveMonthRate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Accrual Amount Effective Month Rate</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmountPriorFY__c</fullName>
        <formula>If( (Value(EffectiveDateFY__c) &lt; YEAR(TODAY()+ 92)),
     
     If( ((YEAR(TODAY()+ 92) - Value(EffectiveDateFY__c)) == 1),
         (
            (  ((12 * (YEAR(DATE(YEAR(EffectiveDate__c + 92),09,30)) - YEAR(EffectiveDate__c))) +
               (MONTH(DATE(YEAR(EffectiveDate__c + 92),09,30))- MONTH(EffectiveDate__c)) + 1) 
                * 
               (AnnualAmount__c/12) 
            )
            +
            (
                (DAY(DATE(YEAR(EffectiveDate__c), MONTH(EffectiveDate__c), 1))
                       - Day(EffectiveDate__c)) 
                * 
                AccrualAmountEffectiveMonthRate__c   
            )
         ),
         (AnnualAmount__c)
     ),

    0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of transaction attributable to previous FY</inlineHelpText>
        <label>Prior FY Calculated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrual Amount</description>
        <label>Accrual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccrualEndDate__c</fullName>
        <formula>If(
     (If(IsNull(Acceptance620Date__c), TODAY(), Acceptance620Date__c) &gt; EffectiveDate__c),
     If(IsNull(Acceptance620Date__c), TODAY(), Acceptance620Date__c),
     EffectiveDate__c 
  )</formula>
        <label>Accrual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualNumber__c</fullName>
        <description>Accrual Number</description>
        <label>Accrual Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccrualStartDateCY__c</fullName>
        <formula>If(EffectiveDateFY__c==Text(YEAR(TODAY()+ 92)),EffectiveDate__c,DATE((YEAR(TODAY())-1),10,01))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrual Start Date CY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccrualType__c</fullName>
        <label>Accrual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnnualAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_IA__c</fullName>
        <formula>(
  IA_Sq_Ft__c /
  IF(
    ((IA_Sq_Ft__c + NOA_Sq_Ft__c) &lt;&gt; 0),
    (IA_Sq_Ft__c + NOA_Sq_Ft__c),
    1 
  )
) 

* AnnualAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Obligation_NOA__c</fullName>
        <formula>If ( ((IA_Sq_Ft__c + NOA_Sq_Ft__c) = 0),
      AnnualAmount__c,
      ((NOA_Sq_Ft__c /(IA_Sq_Ft__c + NOA_Sq_Ft__c)) * AnnualAmount__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Obligation NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDGFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checkmark indicates item is included in budget projection</inlineHelpText>
        <label>Include in Budget Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Exclusion_Reason__c</fullName>
        <label>Budget Exclusion Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CalculateAccruals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate Accruals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DEC_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DEC_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DEC NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delegated_Flag__c</fullName>
        <formula>IF(LeaseNumber__r.DelegatedLease__c=True, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDateFY__c</fullName>
        <formula>Text(YEAR( EffectiveDate__c + 92 ))</formula>
        <label>Effective Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EscalationType__c</fullName>
        <inlineHelpText>Description of type/frequency of escalation</inlineHelpText>
        <label>Escalation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Cost Rent Adjustment Only</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Rent Adjustment Only</fullName>
                </value>
                <value>
                    <fullName>Operating Cost and Real Estate Tax Rent Adjustment</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Lump Sum Only</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Lump Sum Only</fullName>
                </value>
                <value>
                    <fullName>Operating Cost and Real Estate Tax Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Rent Adjustment and Real Estate Tax Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Rent Adjustment and Operating Cost Lump Sum</fullName>
                </value>
                <value>
                    <fullName>O-Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Economic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEB_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FEB_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FEB NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_IA__c</fullName>
        <label>FY Obligation IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_NOA__c</fullName>
        <label>FY Obligation NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Obligation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinanceProcessedDate__c</fullName>
        <label>Finance Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(RegionCd__c==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JAN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUL_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUL NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JUN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>JUN NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Region Specified for Lease falls outside your region</errorMessage>
            <filterItems>
                <field>$User.Glxy_Region_Code__c</field>
                <operation>equals</operation>
                <valueField>Glxy_Lease__c.RegionCD__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Glxy_Region_Code__c</field>
                <operation>equals</operation>
                <value>CO</value>
            </filterItems>
            <infoMessage>Leases in this list as limited to your region</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipLabel>Consumer Price Index</relationshipLabel>
        <relationshipName>CPIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MAR_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAR_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAR NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MAY_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MAY NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_Sq_Ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOV_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOV_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOV NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCT_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCT NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OnTime_Indicator__c</fullName>
        <formula>(Text(StatusCD__c) == &apos;Actual&apos;) &amp;&amp; !(PastDueIndicator__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnTime Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PastDueIndicator__c</fullName>
        <formula>IF(
(
    AND(
          (Text(StatusCD__c)  == &apos;Estimate&apos;),
          (LeaseNumber__r.HoldoverStatusInd__c = False), 
          (BDGFlag__c == true), 
          (
              (MONTH(Today()) + 12 - MONTH(EffectiveDate__c) +
              12 * (YEAR(Today()) - YEAR(EffectiveDate__c) - 1)) &gt; 1
          )
       )
)
,
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentID__c</fullName>
        <description>Escalation ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from Rexus. This helps in finding the record in Rexus.</inlineHelpText>
        <label>Payment ID</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessedDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <inlineHelpText>Date completed</inlineHelpText>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REXUSTotalAmount__c</fullName>
        <label>REXUS Total Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REXUSandPlaceHolders__c</fullName>
        <formula>LeaseNumber__r.LeaseID__c   &amp; &apos;/&apos;&amp;  Text(EscalationType__c)  &amp; &apos;/&apos; &amp;    Text(EffectiveDate__c)</formula>
        <label>Lease/Escalation Type/Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_per__c</fullName>
        <formula>AnnualAmount__c / if(Square_Feet__c ==0, 1, Square_Feet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Per Sq Foot</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <label>Realty Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RegionCd__c</fullName>
        <formula>TEXT(LeaseNumber__r.RegionCD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rexus_Amount__c</fullName>
        <label>Rexus Annual Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CPI Square Feet</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusCD__c</fullName>
        <inlineHelpText>&quot;Actual&quot; or &quot;Estimate&quot;</inlineHelpText>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <formula>LeaseNumber__r.TeamCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_CPI__c</fullName>
        <formula>IF(

   AND (
        (Text(StatusCD__c) == &apos;Estimate&apos;),
        (BDGFlag__c == true),
        (Text(LeaseNumber__r.StatusCode__c) &lt;&gt; &apos;Terminated&apos;),
        (Text(LeaseNumber__r.StatusCode__c) &lt;&gt; &apos;Deleted&apos;)
   )

, true, false   

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upcoming CPI</label>
        <type>Checkbox</type>
    </fields>
    <label>Consumer Price Index</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>AnnualAmount__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_CPI</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>AnnualAmount__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My Region&apos;s CPI</label>
    </listViews>
    <nameField>
        <displayFormat>CPI-{000000}</displayFormat>
        <label>CPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Price Index</pluralLabel>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <description>Record entered in Galaxy</description>
        <label>Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rexus</fullName>
        <active>true</active>
        <description>Record imported from Rexus</description>
        <label>Rexus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CPI_Process_Date_FY</fullName>
        <active>true</active>
        <description>Process Date cannot be in a prior Fiscal Year</description>
        <errorConditionFormula>TEXT(StatusCD__c) == &apos;Estimate&apos;
&amp;&amp;
YEAR(ProcessedDate__c + 92) &lt; YEAR(TODAY() + 92)
&amp;&amp;
!CONTAINS($User.FirstName, &apos;CastIron&apos;)</errorConditionFormula>
        <errorDisplayField>ProcessedDate__c</errorDisplayField>
        <errorMessage>Process Date cannot be in a prior Fiscal Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPI_Process_Date_Validation</fullName>
        <active>false</active>
        <description>Process Date cannot be less than the Effective Date</description>
        <errorConditionFormula>TEXT(StatusCD__c) == &apos;Estimate&apos;
&amp;&amp;
ProcessedDate__c &lt; EffectiveDate__c</errorConditionFormula>
        <errorDisplayField>ProcessedDate__c</errorDisplayField>
        <errorMessage>Process Date cannot be less than the Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SumOfNOAandIA</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(NOA_Sq_Ft__c &lt;&gt;0, IA_Sq_Ft__c&lt;&gt;0,LeaseNumber__r.BaseSquareFeet__c&lt;&gt;0),
NOA_Sq_Ft__c +  IA_Sq_Ft__c &gt; LeaseNumber__r.BaseSquareFeet__c,FALSE)</errorConditionFormula>
        <errorMessage>Sum of NOA and IA Sq. Ft. cannot exceed the total square feet of the Lease.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Budget_exclude_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND( BDGFlag__c =False,ISBLANK( Budget_Exclusion_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Budget_Exclusion_Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason for exclusion of this record from the budget.</errorMessage>
    </validationRules>
</CustomObject>